sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:14: error: value or is not a member of Boolean
    if(ecart==9 or ecart==10  )
                ^