sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
  val n = getNombreValeurs()
  var ecart = n
  var end = false
  
  do
  {
    end = true
    if(ecart>1)
    {
      ecart = (ecart.toDouble / 1.3).toInt
    }
    if(ecart==9 or ecart==10  )
    	ecart = 11
    for(i <- 0 to n-ecart-1 )
    {
      if(plusPetit(i+ecart,i))
      {
        echange(i,i+ecart)
        end = false
      }
    }
  }while(!end || ecart>1)
  
}


/*

def combSort() {
  val n = getNombreValeurs()
  var ecart = n
  var end = false
  
  do
  {
    end = true
    if(ecart>1)
    {
      ecart = (ecart.toDouble / 1.3).toInt
    }
    for(i <- 0 to n-ecart-1 )
    {
      if(plusPetit(i+ecart,i))
      {
        echange(i,i+ecart)
        end = false
      }
    }
  }while(!end || ecart>1)
  
}

*/